# 03-seismic-tomography-compute

./: CMakeLists.txt  DEPLOYMENT.md  README.md
config/: default.yaml
deploy/: slurm_job.sh
src/cpp/core/: config.cpp  config.h  fault_tolerance.cpp  fault_tolerance.h  grid.cpp  grid.h  mpi_context.cpp  mpi_context.h
src/cpp/io/: hdf5_io.cpp  hdf5_io.h
src/cpp/pybind/: bindings.cpp
src/cpp/rtm/: mmap_writer.cpp  mmap_writer.h  rtm_engine.cpp  rtm_engine.h  snapshot_buffer.cpp  snapshot_buffer.h
src/cpp/solver/: boundary.cpp  boundary.h  wave_equation.cpp  wave_equation.h
src/cpp/sparse/: aligned_alloc.h  csr_matrix.cpp  csr_matrix.h  sparse_ops.cpp  sparse_ops.h
src/python/: requirements.txt
src/python/scripts/: run_inversion.py  start_api_server.py
src/python/seismic_tomography/: __init__.py  api_server.py  gradient.py  hdf5_writer.py  inversion.py  model.py  obs_data.py  viz_client.py
